<resources>
    <string name="app_name">AppOfertasLaborales</string>
    <string name="title_activity_google_maps">GoogleMapsActivity</string>

    <!--Registro de cuenta-->
    <string name="txt_registrarse_form">Formulario de registro</string>
    <string name="txt_registrarse">Registrarse</string>
    <string name="txt_persona_o_entidad">Registrarse como: Persona real / Institución</string>
    <!--* Persona-->
    <string name="txt_nombres">Nombres</string>
    <string name="txt_nombre">Nombre</string>
    <string name="txt_apellidos">Apellidos</string>
    <string name="txt_fecha_nac">Fecha de nacimiento</string>
    <string name="txt_email">Email</string>
    <string name="txt_profesion">Profesión</string>
    <string name="txt_password">Contraseña</string>
    <string name="txt_confirmar_password">Confirmar contraseña</string>
    <string name="txt_celular">Número celular</string>
    <string name="txt_area">Área</string>
    <string name="title_activity_ubicacion_institucion_maps">UbicacionInstitucionMapsActivity</string>

    <!--Nuevo empleo-->

    <string name="txt_nuevo_empleo">Nuevo empleo</string>
    <string name="txt_registrar">Registrar</string>
    <string name="txt_titulo">Título</string>
    <string name="txt_descripcion">Descripción</string>

    <!---Info Window-->
    <string name="Img_infoWindow_des">Imagen con símbolo de alerta</string>
    <string name="txt_presentarse">[Presentarse]</string>

    <!--Recursos utiles para la conifugracion de su ventana de dialogo-->
    <string name="alert_dialog_title">Desea habilitar el GPS?</string>
    <string name="alert_dialog_description">Esta aplicación necesita utilizar el servicio de GPS. Vaya a hailitarlo.</string>
    <string name="alert_dialog_button_accept">Habilitar</string>
    <string name="alert_dialog_button_denny">Ignorar</string>
</resources>